--- a/config/locales/hyrax.zh.yml
+++ b/config/locales/hyrax.zh.yml
@@ -1,4 +1,3 @@
----
 zh:
   activefedora:
     models:
@@ -12,13 +11,19 @@ zh:
       student_work: '学生作品'
   blacklight:
     search:
+      collections: 收藏
       fields:
         facet:
           based_near_label_sim: 位置
+          college_sim: 学
           creator_sim: 创建者
+          date_created_sim: 创建日期
+          department_sim: 部门
           file_format_sim: 文件格式
           generic_type_sim: 类型
+          human_readable_type_sim: 工作类型
           language_sim: 语言
+          member_of_collection_ids_ssim: 集合
           publisher_sim: 出版者
           subject_sim: 学科
         index:
@@ -34,21 +39,30 @@ zh:
           date_uploaded_ssi: 上传日期
           license_tesim: 证书
         show:
-          based_near_tesim: 位置
-          contributor_tesim: 投稿者
-          creator_tesim: 创造者
-          date_created_tesim: 创建日期
-          date_modified_dtsi: 修改日期
-          date_uploaded_dtsi: 日期上传
-          description_tesim: 描述
-          file_format_tesim: 文件格式
-          identifier_tesim: 识别码
-          language_tesim: 语言
-          license_tesim: 执照
-          publisher_tesim: 出版者
-          rights_statement_tesim: 权
-          subject_tesim: 学科
-          title_tesim: 标题
+          advisor: 指导教授
+          alternate_title: 副标题
+          college: 学
+          committee_member: 委员会成员
+          creator: 创建者
+          date_created: 创建日期
+          degree: 学位
+          department: 部门
+          genre: 类型
+          geo_subject: 地理主题
+          identifier: 识别码
+          issn: Issn
+          journal_title: 期刊名称 
+          language: 语言
+          license: 证书
+          note: 音符
+          publisher: 出版者
+          etd_publisher: 出版者
+          related_url: 相关网址
+          required_software: 所需的软件
+          subject: 学科
+          submitter: 提交
+          time_period: 时间段
+      works: 作品
   simple_form:
     labels:
       defaults:
@@ -62,12 +76,24 @@ zh:
     batch_uploads:
       files:
         upload_type_instructions: '注意：为每一个文件创建单独的作品 '
+    collections:
+      show:
+        collection_details: 收集细节
+        created_by: 由...制作
+        item: 项目
+        last_updated: 最近更新时间
+        refresh: 刷新
+        results_per_page: 每页结果
+        sort_by: 排序方式
+        works_in_collection: 此集合中的项目
     contact_form:
       header: 联系 Scholar@UC 团队
       notice_html: ‘请使用这个表格发送问题，回复和报告给scholar团队’
       help_resources_href: '帮助'
     passive_consent_to_agreement: 我已经阅读并且同意
     homepage:
+      browse: 浏览
+      contribute: 投稿
       featured_works:
         tab_label:          '特色作品'
         title:              '特色作品'
@@ -78,9 +104,19 @@ zh:
       featured_collections:
         title:              '特色收藏'
         no_collections:     '没有特色收藏'
+      headline: 'Scholar@UC使UC社区能够与全球观众分享研究和学术着作。辛辛那提大学图书馆和IT@UC在研究办公室的支持下，正在合作支持Scholar@UC'
+      learn_more: 了解有关Scholar@UC的更多信息
+      links:
+        digital_scholarship: 数字奖学金
+        manage_your_data: 管理您的数据
+        scholar_blog: Scholar博客
+      partners: 伙伴
+      what_is: 什么是
     pages:
       tabs:
         agreement_page: '分布证件'
+    search:
+      browse: 浏览
     users:
       search_placeholder: '搜索人员'
     workform_help_html: '<p>提供具体的描述帮助我们更好的服务你.</p>'
@@ -122,9 +158,15 @@ zh:
         export_collection: "探索收藏"
         manage_exports: "管理输出"
     dashboard:
+      stats:
+        file_views: "文件视图"
+        work_views: "工作视图"
       my:
         action:
           export_collection: "探索收藏"
+      collections:
+        show:
+          item_count: 此集合中的项目
       proxy_help: "请注意: 你所选择的代理人可以代表你更改作品。如果你受理一个代理人 他们可以创造上传编辑删除文件。代理关系可以被拥有者取消。 使用特定作品的编辑者可以有更加具体的存取权。"
     welcome:
       waive_page: "点击这里隐藏欢迎网页当你登陆后"
@@ -160,4 +202,6 @@ zh:
     works:
       form:
         tab:
+          doi: 'DOI'
+          doi:message: 'DOIs需要Publisher字段中的值。 “University of Cincinnati”是默认发布者，但您可以选择在保存此工作之前在“元数据”选项卡上更改它'
           metadata: "元数据"
