Change flash message wording.

--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -59,6 +59,8 @@ en:
     base:
       form_progress:
         required_agreement: Check distribution license
+      items:
+        empty: 'This %{type} has no files associated with it. (If you just created this %{type}, it may take a few minutes for the files to display. Try refreshing the page again.) Otherwise, click edit to add more files.'
     batch_uploads:
       files:
         upload_type_instructions: 'Note: To create a single work for all the files, '
