--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,7 +31,7 @@ en:
   link_page_label: "Link to this page"
   permanent_link_label: "Permanent link to this page"
   collection_export:
-    title:
+    title: "Manage Collection Exports"
     header:
       collection_id: "Collection id"
       timestamp: "Timestamp"
