Show ETD committee members on work show page

--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -42,7 +42,7 @@ en:
           advisor: Advisor
           alternate_title: Alternate Title
           college: College
-          committee_member: Committe Member
+          committee_member: Committee Member
           creator: Creator
           date_created: Date Created
           degree: Degree
