--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -44,3 +44,7 @@ es:
     create_confirmation: "La exportación de la colección fue creada con éxito."
     destroy_confirmation: "La exportación de la colección se ha eliminado correctamente."
   whats_new: Qué hay de nuevo
+  devise:
+    sessions:
+      user:
+        signed_in: "Inicia sesión con éxito."
