--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -44,3 +44,7 @@ zh:
     create_confirmation: "已成功创建集合导出。"
     destroy_confirmation: "集合导出已成功删除。"
   whats_new: 什么是新的
+  devise:
+    sessions:
+      user:
+        signed_in: "成功签约。"
