--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -31,7 +31,7 @@ zh:
   link_page_label: "链接到此页面"
   permanent_link_label: "永久链接到此页面"
   collection_export:
-    title:
+    title: "管理集合导出"
     header:
       collection_id: "收集ID"
       timestamp: "时间戳"
