--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,7 +35,7 @@ en:
     header:
       collection_id: "Collection id"
       timestamp: "Timestamp"
-      destroy: "Delete"
+      destroy: "Actions"
       download: "File"
     action:
       destroy: "Delete"
