always show english worktype in work show view

--- a/config/locales/article.es.yml
+++ b/config/locales/article.es.yml
@@ -6,5 +6,5 @@ es:
       article:
         # TODO: translate `human_name` into Spanish
         description:        "Article trabajos"
-        name:               "Article"
+        name:               "Articulo"
         # TODO: translate `human_name` into Spanish
