--- a/config/locales/medium.es.yml
+++ b/config/locales/medium.es.yml
@@ -6,5 +6,5 @@ es:
       medium:
         # TODO: translate `human_name` into Spanish
         description:        "Medium trabajos"
-        name:               "Medium"
+        name:               "Medios de comunicación"
         # TODO: translate `human_name` into Spanish
