--- a/config/locales/medium.zh.yml
+++ b/config/locales/medium.zh.yml
@@ -6,5 +6,5 @@ zh:
       medium:
         # TODO: translate `human_name` into Chinese
         description:        "Medium 作品"
-        name:               "Medium"
+        name:               "媒体"
         # TODO: translate `human_name` into Chinese
