--- a/config/locales/student_work.zh.yml
+++ b/config/locales/student_work.zh.yml
@@ -6,5 +6,5 @@ zh:
       student_work:
         # TODO: translate `human_name` into Chinese
         description:        "Student work 作品"
-        name:               "Student Work"
+        name:               "学生作品"
         # TODO: translate `human_name` into Chinese
