--- a/config/locales/article.zh.yml
+++ b/config/locales/article.zh.yml
@@ -6,5 +6,5 @@ zh:
       article:
         # TODO: translate `human_name` into Chinese
         description:        "Article 作品"
-        name:               "Article"
+        name:               "文章"
         # TODO: translate `human_name` into Chinese
