--- a/config/locales/document.zh.yml
+++ b/config/locales/document.zh.yml
@@ -6,5 +6,5 @@ zh:
       document:
         # TODO: translate `human_name` into Chinese
         description:        "Document 作品"
-        name:               "Document"
+        name:               "文件"
         # TODO: translate `human_name` into Chinese
