--- a/config/locales/generic_work.es.yml
+++ b/config/locales/generic_work.es.yml
@@ -6,5 +6,5 @@ es:
       generic_work:
         # TODO: translate `human_name` into Spanish
         description:        "Generic work trabajos"
-        name:               "Generic Work"
+        name:               "Trabajo genérico"
         # TODO: translate `human_name` into Spanish
