--- a/config/locales/generic_work.zh.yml
+++ b/config/locales/generic_work.zh.yml
@@ -6,5 +6,5 @@ zh:
       generic_work:
         # TODO: translate `human_name` into Chinese
         description:        "Generic work 作品"
-        name:               "Generic Work"
+        name:               "普通文件"
         # TODO: translate `human_name` into Chinese
