--- a/config/locales/image.zh.yml
+++ b/config/locales/image.zh.yml
@@ -6,5 +6,5 @@ zh:
       image:
         # TODO: translate `human_name` into Chinese
         description:        "Image 作品"
-        name:               "Image"
+        name:               "图像"
         # TODO: translate `human_name` into Chinese
